--- a/billing/pom.xml
+++ b/billing/pom.xml
@@ -115,8 +115,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.source}</target>
+                     <source>1.8</source>
+             		<target>1.8</target>
                     <!-- generate mappers -->
                     <annotationProcessorPaths>
                         <path>
